lambda-appsync-proc/tests/fail/invalid_operation.stderr
error[E0433]: failed to resolve: could not find `nonexistent` in `queries`
 --> tests/fail/invalid_operation.rs:5:27
  |
5 | #[appsync_operation(query(nonexistent))]
  |                           ^^^^^^^^^^^ could not find `nonexistent` in `queries`
  |
help: consider importing one of these modules
  |
1 + use crate::__operations::mutations::create_player::without_event;
  |
1 + use crate::__operations::mutations::delete_player::without_event;
  |
1 + use crate::__operations::mutations::set_game_status::without_event;
  |
1 + use crate::__operations::queries::game_status::without_event;
  |
    and 5 other candidates
